spacing fixes for desktop

--- a/civictechprojects/static/css/partials/_CorporateHackathon.scss
+++ b/civictechprojects/static/css/partials/_CorporateHackathon.scss
@@ -317,7 +317,9 @@
       padding: 15px;
     }
   }
-
+  .corporate-hackathon-howitworks h2 {
+    margin-bottom: 40px;
+  }
   .corporate-root {
     .ContactForm-container {
       width: 100%;
@@ -406,7 +408,8 @@
   .corporate-hackathon-howitworks,
   .corporate-contact,
   .corporate-hackathon-saying,
-  .corporate-sponsorship-saying {
+  .corporate-sponsorship-saying,
+  .corporate-sponsorship-how {
     padding-bottom: 64px;
   }
   .corporate-hackathon-whyhost,
